--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
   <div id="unlock-notification"></div>
 
   <div id="gameOverMenu" class="modal-background">
-      <h1>GAME OVER</h1>
+      <h1>TIMELINE COLLAPSED</h1>
       <div id="gameOverActions">
           <button id="restartStageBtn">Restart Stage</button>
+          <button id="ascensionMenuBtn">Ascension Conduit</button>
           <button id="levelSelectMenuBtn">Stage Select</button>
       </div>
   </div>
