--- a/index.html
+++ b/index.html
@@ -164,6 +164,27 @@
   <audio id="uiModalOpen" src="./assets/uiModalOpen.mp3" preload="none"></audio>
   <audio id="vampireHeal" src="./assets/vampireHeal.mp3" preload="none"></audio>
 
+  <audio id="aspectDefeated" src="./assets/aspectDefeated.mp3" preload="none"></audio>
+  <audio id="conduitShatter" src="./assets/conduitShatter.mp3" preload="none"></audio>
+  <audio id="dilationField" src="./assets/dilationField.mp3" preload="none" loop></audio>
+  <audio id="fractalSplit" src="./assets/fractalSplit.mp3" preload="none"></audio>
+  <audio id="miasmaGasRelease" src="./assets/miasmaGasRelease.mp3" preload="none"></audio>
+  <audio id="miasmaSlam" src="./assets/miasmaSlam.mp3" preload="none"></audio>
+  <audio id="obeliskHum" src="./assets/obeliskHum.mp3" preload="none" loop></audio>
+  <audio id="pantheonSummon" src="./assets/pantheonSummon.mp3" preload="none"></audio>
+  <audio id="paradoxShatter" src="./assets/paradoxShatter.mp3" preload="none"></audio>
+  <audio id="paradoxTrailHum" src="./assets/paradoxTrailHum.mp3" preload="none" loop></audio>
+  <audio id="powerAbsorb" src="./assets/powerAbsorb.mp3" preload="none"></audio>
+  <audio id="shaperAppear" src="./assets/shaperAppear.mp3" preload="none"></audio>
+  <audio id="shaperAttune" src="./assets/shaperAttune.mp3" preload="none"></audio>
+  <audio id="shaperFail" src="./assets/shaperFail.mp3" preload="none"></audio>
+  <audio id="syphonFire" src="./assets/syphonFire.mp3" preload="none"></audio>
+  <audio id="timeRewind" src="./assets/timeRewind.mp3" preload="none"></audio>
+  <audio id="ventPurify" src="./assets/ventPurify.mp3" preload="none"></audio>
+  <audio id="wallShrink" src="./assets/wallShrink.mp3" preload="none" loop></audio>
+  <audio id="wallSummon" src="./assets/wallSummon.mp3" preload="none"></audio>
+  <audio id="weaverCast" src="./assets/weaverCast.mp3" preload="none"></audio>
+
   <audio id="bgMusic_01" src="./assets/bgMusic_01.mp3" loop preload="none"></audio>
   <audio id="bgMusic_02" src="./assets/bgMusic_02.mp3" loop preload="none"></audio>
   <audio id="bgMusic_03" src="./assets/bgMusic_03.mp3" loop preload="none"></audio>
