--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
         </div>
         <div id="modal-actions">
-            <button id="arenaBtn">Arena Mode</button>
+            <button id="arenaBtn">WEAVER'S ORRERY</button>
             <button id="jumpToFrontierBtn">JUMP TO FRONTIER</button>
             <button id="closeLevelSelectBtn" class="btn-modal-close">Close</button>
         </div>
@@ -127,6 +127,38 @@
         <div class="ascension-footer">
             <button id="clearSaveBtn">ERASE TIMELINE</button>
             <button id="closeAscensionBtn" class="btn-modal-close">CLOSE</button>
+        </div>
+    </div>
+  </div>
+
+  <div id="orreryModal">
+    <div id="orrery-modal-content" class="modal-background">
+        <div class="ascension-header">
+            <h1>THE WEAVER'S ORRERY</h1>
+            <div class="ap-display-header">
+                <span>ECHOES OF CREATION</span>
+                <span id="orrery-points-total">0</span>
+            </div>
+        </div>
+        <div id="orrery-main-content">
+            <div id="orrery-boss-list-container">
+            </div>
+            <div id="orrery-selection-container">
+                <h3>TIMELINE ROSTER</h3>
+                <div id="orrery-selection-display">
+                </div>
+                <div id="orrery-cost-display">
+                    <span>ECHOES SPENT: </span>
+                    <span id="orrery-current-cost">0</span>
+                </div>
+            </div>
+        </div>
+        <div class="ascension-footer">
+            <button id="orrery-reset-btn">CLEAR ROSTER</button>
+            <div style="display: flex; gap: 15px;">
+                <button id="orrery-start-btn" class="disabled">FORGE TIMELINE</button>
+                <button id="closeOrreryBtn" class="btn-modal-close">CLOSE</button>
+            </div>
         </div>
     </div>
   </div>
