--- a/index.html
+++ b/index.html
@@ -163,6 +163,16 @@
     </div>
   </div>
   
+  <div id="bossInfoModal">
+      <div id="bossInfoModalBox" class="modal-background">
+          <h2 id="bossInfoModalTitle"></h2>
+          <div id="bossInfoModalContent"></div>
+          <div id="bossInfoModalActions">
+              <button id="closeBossInfoModalBtn" class="btn-modal-close">Close</button>
+          </div>
+      </div>
+  </div>
+
   <audio id="annihilatorBeamSound" src="./assets/annihilatorBeamSound.mp3" preload="none"></audio>
   <audio id="architectBuild" src="./assets/architectBuild.mp3" preload="none"></audio>
   <audio id="beamHumSound" src="./assets/beamHumSound.mp3" preload="none" loop></audio>
