--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         </div>
         <div id="modal-actions">
             <button id="arenaBtn">WEAVER'S ORRERY</button>
+            <button id="storyBtn">STORY</button>
             <button id="jumpToFrontierBtn">JUMP TO FRONTIER</button>
             <button id="closeLevelSelectBtn" class="btn-modal-close">Close</button>
         </div>
