--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 
   <div id="levelSelectModal">
     <div id="modal-content" class="modal-background">
+        <button id="loreCodexBtn" class="top-right-btn">LORE CODEX</button>
         <h2 class="modal-title">SELECT STAGE</h2>
         <div id="level-select-list-container">
             <div id="level-select-list">
@@ -107,7 +108,6 @@
         </div>
         <div id="modal-actions">
             <button id="arenaBtn">WEAVER'S ORRERY</button>
-            <button id="storyBtn">STORY</button>
             <button id="jumpToFrontierBtn">JUMP TO FRONTIER</button>
             <button id="closeLevelSelectBtn" class="btn-modal-close">Close</button>
         </div>
