--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                 <div id="ascension-bar-text">LVL 1</div>
             </div>
             <div id="ascension-points-display">AP: 0</div>
+            <div id="aberration-core-socket" data-tooltip-text="No Core Attuned">
+                <div id="aberration-core-icon">◎</div>
+            </div>
         </div>
 
         <div id="health-bar-container">
@@ -130,6 +133,24 @@
             <button id="closeAscensionBtn" class="btn-modal-close">CLOSE</button>
         </div>
     </div>
+  </div>
+  
+  <div id="aberrationCoreModal">
+      <div id="aberration-core-container" class="modal-background">
+          <div class="ascension-header">
+              <h1>ABERRATION CORE ATTUNEMENT</h1>
+              <div id="aberration-core-equipped-display">
+                  <span>CURRENTLY ATTUNED</span>
+                  <span id="aberration-core-equipped-name">None</span>
+              </div>
+          </div>
+          <div id="aberration-core-list-container">
+              </div>
+          <div class="ascension-footer">
+              <button id="unequipCoreBtn">UNEQUIP CORE</button>
+              <button id="closeAberrationCoreBtn" class="btn-modal-close">CLOSE</button>
+          </div>
+      </div>
   </div>
 
   <div id="orreryModal">
