--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h1>TIMELINE COLLAPSED</h1>
       <div id="gameOverActions">
           <button id="restartStageBtn">Restart Stage</button>
-          <button id="ascensionMenuBtn">Ascension Conduit</button>
+          <button id="aberrationMenuBtn">Aberration Cores</button> <button id="ascensionMenuBtn">Ascension Conduit</button>
           <button id="levelSelectMenuBtn">Stage Select</button>
       </div>
   </div>
@@ -61,9 +61,6 @@
                 <div id="ascension-bar-text">LVL 1</div>
             </div>
             <div id="ascension-points-display">AP: 0</div>
-            <div id="aberration-core-socket" data-tooltip-text="No Core Attuned">
-                <div id="aberration-core-icon">◎</div>
-            </div>
         </div>
 
         <div id="health-bar-container">
@@ -74,6 +71,9 @@
         </div>
 
         <div class="core-display">
+            <div id="aberration-core-socket" data-tooltip-text="No Core Attuned">
+                <div id="aberration-core-icon">◎</div>
+            </div>
             <div class="ability-cluster">
                 <div class="ability-queue defensive">
                     <div class="queue-slot" id="q-def-1"></div>
@@ -145,7 +145,7 @@
               </div>
           </div>
           <div id="aberration-core-list-container">
-              </div>
+          </div>
           <div class="ascension-footer">
               <button id="unequipCoreBtn">UNEQUIP CORE</button>
               <button id="closeAberrationCoreBtn" class="btn-modal-close">CLOSE</button>
@@ -197,69 +197,6 @@
 
   <audio id="annihilatorBeamSound" src="./assets/annihilatorBeamSound.mp3" preload="none"></audio>
   <audio id="architectBuild" src="./assets/architectBuild.mp3" preload="none"></audio>
-  <audio id="beamHumSound" src="./assets/beamHumSound.mp3" preload="none" loop></audio>
-  <audio id="bossDefeatSound" src="./assets/bossDefeatSound.mp3" preload="none"></audio>
-  <audio id="bossSpawnSound" src="./assets/bossSpawnSound.mp3" preload="none"></audio>
-  <audio id="chainSound" src="./assets/chainSound.mp3" preload="none"></audio>
-  <audio id="chargeDashSound" src="./assets/chargeDashSound.mp3" preload="none"></audio>
-  <audio id="chargeUpSound" src="./assets/chargeUpSound.mp3" preload="none"></audio>
-  <audio id="empDischarge" src="./assets/empDischarge.mp3" preload="none"></audio>
-  <audio id="finalBossPhaseSound" src="./assets/finalBossPhaseSound.mp3" preload="none"></audio>
-  <audio id="glitchSound" src="./assets/glitchSound.mp3" preload="none"></audio>
-  <audio id="gravitySound" src="./assets/gravitySound.mp3" preload="none"></audio>
-  <audio id="hitSound" src="./assets/hitSound.mp3" preload="none"></audio>
-  <audio id="magicDispelSound" src="./assets/magicDispelSound.mp3" preload="none"></audio>
-  <audio id="mirrorSwap" src="./assets/mirrorSwap.mp3" preload="none"></audio>
-  <audio id="phaseShiftSound" src="./assets/phaseShiftSound.mp3" preload="none"></audio>
-  <audio id="pickupSound" src="./assets/pickupSound.mp3" preload="none"></audio>
-  <audio id="powerSirenSound" src="./assets/powerSirenSound.mp3" preload="none"></audio>
-  <audio id="puppeteerConvert" src="./assets/puppeteerConvert.mp3" preload="none"></audio>
-  <audio id="reflectorOnHit" src="./assets/reflectorOnHit.mp3" preload="none"></audio>
-  <audio id="shieldBreak" src="./assets/shieldBreak.mp3" preload="none"></audio>
-  <audio id="shockwaveSound" src="./assets/shockwaveSound.mp3" preload="none"></audio>
-  <audio id="splitterOnDeath" src="./assets/splitterOnDeath.mp3" preload="none"></audio>
-  <audio id="stoneCrackingSound" src="./assets/stoneCrackingSound.mp3" preload="none"></audio>
-  <audio id="systemErrorSound" src="./assets/systemErrorSound.mp3" preload="none"></audio>
-  <audio id="talentError" src="./assets/talentError.mp3" preload="none"></audio>
-  <audio id="talentPurchase" src="./assets/talentPurchase.mp3" preload="none"></audio>
-  <audio id="uiClickSound" src="./assets/uiClickSound.mp3" preload="none"></audio>
-  <audio id="uiHoverSound" src="./assets/uiHoverSound.mp3" preload="none"></audio>
-  <audio id="uiModalClose" src="./assets/uiModalClose.mp3" preload="none"></audio>
-  <audio id="uiModalOpen" src="./assets/uiModalOpen.mp3" preload="none"></audio>
-  <audio id="vampireHeal" src="./assets/vampireHeal.mp3" preload="none"></audio>
-
-  <audio id="aspectDefeated" src="./assets/aspectDefeated.mp3" preload="none"></audio>
-  <audio id="conduitShatter" src="./assets/conduitShatter.mp3" preload="none"></audio>
-  <audio id="dilationField" src="./assets/dilationField.mp3" preload="none" loop></audio>
-  <audio id="fractalSplit" src="./assets/fractalSplit.mp3" preload="none"></audio>
-  <audio id="miasmaGasRelease" src="./assets/miasmaGasRelease.mp3" preload="none"></audio>
-  <audio id="miasmaSlam" src="./assets/miasmaSlam.mp3" preload="none"></audio>
-  <audio id="obeliskHum" src="./assets/obeliskHum.mp3" preload="none" loop></audio>
-  <audio id="pantheonSummon" src="./assets/pantheonSummon.mp3" preload="none"></audio>
-  <audio id="paradoxShatter" src="./assets/paradoxShatter.mp3" preload="none"></audio>
-  <audio id="paradoxTrailHum" src="./assets/paradoxTrailHum.mp3" preload="none" loop></audio>
-  <audio id="powerAbsorb" src="./assets/powerAbsorb.mp3" preload="none"></audio>
-  <audio id="shaperAppear" src="./assets/shaperAppear.mp3" preload="none"></audio>
-  <audio id="shaperAttune" src="./assets/shaperAttune.mp3" preload="none"></audio>
-  <audio id="shaperFail" src="./assets/shaperFail.mp3" preload="none"></audio>
-  <audio id="syphonFire" src="./assets/syphonFire.mp3" preload="none"></audio>
-  <audio id="timeRewind" src="./assets/timeRewind.mp3" preload="none"></audio>
-  <audio id="ventPurify" src="./assets/ventPurify.mp3" preload="none"></audio>
-  <audio id="wallShrink" src="./assets/wallShrink.mp3" preload="none" loop></audio>
-  <audio id="wallSummon" src="./assets/wallSummon.mp3" preload="none"></audio>
-  <audio id="weaverCast" src="./assets/weaverCast.mp3" preload="none"></audio>
-
-  <audio id="bgMusic_01" src="./assets/bgMusic_01.mp3" loop preload="none"></audio>
-  <audio id="bgMusic_02" src="./assets/bgMusic_02.mp3" loop preload="none"></audio>
-  <audio id="bgMusic_03" src="./assets/bgMusic_03.mp3" loop preload="none"></audio>
-  <audio id="bgMusic_04" src="./assets/bgMusic_04.mp3" loop preload="none"></audio>
-  <audio id="bgMusic_05" src="./assets/bgMusic_05.mp3" loop preload="none"></audio>
-  <audio id="bgMusic_06" src="./assets/bgMusic_06.mp3" loop preload="none"></audio>
-  <audio id="bgMusic_07" src="./assets/bgMusic_07.mp3" loop preload="none"></audio>
-  <audio id="bgMusic_08" src="./assets/bgMusic_08.mp3" loop preload="none"></audio>
-  <audio id="bgMusic_09" src="./assets/bgMusic_09.mp3" loop preload="none"></audio>
-  <audio id="bgMusic_10" src="./assets/bgMusic_10.mp3" loop preload="none"></audio>
-  
   <script type="module" src="./main.js"></script>
 </body>
 </html>
