--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
   </div>
 
   <div id="ui-container">
-    <div id="status-effects-bar"></div>
     <div class="command-bar">
         <div class="ui-pod left-pod">
             <div id="ascension-bar-container">
@@ -64,29 +63,31 @@
             <div id="ascension-points-display">AP: 0</div>
         </div>
 
-        <div id="health-bar-container">
-            <div id="shield-bar-overlay"></div>
-            <div id="health-bar-value" class="health-high"></div>
-            <div id="health-bar-text">100 / 100</div>
-            <div id="health-bar-sheen"></div>
-        </div>
-
-        <div class="core-display">
-            <div class="ability-cluster">
-                <div id="aberration-core-socket" data-tooltip-text="No Core Attuned">
-                    <div id="aberration-core-icon">◎</div>
-                </div>
-                <div class="ability-queue defensive">
-                    <div class="queue-slot" id="q-def-1"></div>
-                    <div class="queue-slot" id="q-def-2"></div>
-                </div>
-                <div class="abilities">
-                    <div class="ability-slot" id="slot-def-0" data-tooltip-text="Defensive Power (Right-Click)"></div>
-                    <div class="ability-slot main" id="slot-off-0" data-tooltip-text="Offensive Power (Left-Click)"></div>
-                </div>
-                <div class="ability-queue offensive">
-                    <div class="queue-slot" id="q-off-1"></div>
-                    <div class="queue-slot" id="q-off-2"></div>
+        <div class="central-hud">
+            <div id="status-effects-bar"></div>
+            <div id="health-bar-container">
+                <div id="shield-bar-overlay"></div>
+                <div id="health-bar-value" class="health-high"></div>
+                <div id="health-bar-text">100 / 100</div>
+                <div id="health-bar-sheen"></div>
+            </div>
+            <div class="core-display">
+                <div class="ability-cluster">
+                    <div id="aberration-core-socket" data-tooltip-text="No Core Attuned">
+                        <div id="aberration-core-icon">◎</div>
+                    </div>
+                    <div class="ability-queue defensive">
+                        <div class="queue-slot" id="q-def-1"></div>
+                        <div class="queue-slot" id="q-def-2"></div>
+                    </div>
+                    <div class="abilities">
+                        <div class="ability-slot" id="slot-def-0" data-tooltip-text="Defensive Power (Right-Click)"></div>
+                        <div class="ability-slot main" id="slot-off-0" data-tooltip-text="Offensive Power (Left-Click)"></div>
+                    </div>
+                    <div class="ability-queue offensive">
+                        <div class="queue-slot" id="q-off-1"></div>
+                        <div class="queue-slot" id="q-off-2"></div>
+                    </div>
                 </div>
             </div>
         </div>
