--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
 
       <div class="hud-group-center">
           <div id="aberration-core-socket" data-tooltip-text="No Core Attuned">
-              <div id="aberration-core-icon">◎</div>
+              <div id="aberration-core-icon">
+                <div id="aberration-core-cooldown" class="cooldown-overlay"></div>
+                ◎
+              </div>
           </div>
           <div class="health-cluster">
             <div id="status-effects-bar"></div>
@@ -82,6 +85,7 @@
                 <div id="health-bar-text">100 / 100</div>
                 <div id="health-bar-sheen"></div>
             </div>
+            <div id="pantheon-buffs-bar"></div>
           </div>
       </div>
 
