--- a/index.html
+++ b/index.html
@@ -114,36 +114,32 @@
   <div id="levelSelectModal">
     <div id="modal-content" class="modal-background">
         <button id="loreCodexBtn" class="top-right-btn">LORE CODEX</button>
-        <h2 class="modal-title">SELECT STAGE</h2>
-        <div id="level-select-controls">
-            <input type="search" id="stageSearchInput" placeholder="Search stage or boss..." aria-label="Search stages">
-            <label class="stage-filter-toggle">
-                <input type="checkbox" id="stageShowCleared">
-                <span class="filter-switch" aria-hidden="true">
-                    <span class="filter-switch-knob"></span>
-                </span>
-                <span class="filter-label">Cleared Only</span>
-            </label>
-        </div>
+        <h2 class="modal-title">TIMELINE NAVIGATOR</h2>
         <div id="level-select-main">
+            <div id="level-select-top">
+                <div class="search-panel">
+                    <p class="modal-subtitle">Chart a frontier or revisit a past breach.</p>
+                    <input type="search" id="stageSearchInput" placeholder="Search timelines or bosses..." aria-label="Search timelines">
+                </div>
+                <aside id="stage-details-panel" aria-live="polite">
+                    <div id="stage-details-empty">Select a timeline to review mission intel.</div>
+                    <div id="stage-details-content" hidden>
+                        <h3 id="stage-details-title">Timeline Briefing</h3>
+                        <p id="stage-details-subtitle"></p>
+                        <ul id="stage-details-stats"></ul>
+                        <p id="stage-details-last-run"></p>
+                    </div>
+                    <button id="stage-details-reset" class="btn-secondary" disabled>Purge Telemetry</button>
+                </aside>
+            </div>
             <div id="level-select-list-container">
                 <div id="level-select-list">
                 </div>
             </div>
-            <aside id="stage-details-panel" aria-live="polite">
-                <div id="stage-details-empty">Hover a stage to review timeline intel.</div>
-                <div id="stage-details-content" hidden>
-                    <h3 id="stage-details-title">Stage Intel</h3>
-                    <p id="stage-details-subtitle"></p>
-                    <ul id="stage-details-stats"></ul>
-                    <p id="stage-details-last-run"></p>
-                </div>
-                <button id="stage-details-reset" class="btn-secondary" disabled>Reset Stage Stats</button>
-            </aside>
         </div>
         <div id="modal-actions">
             <button id="arenaBtn">WEAVER'S ORRERY</button>
-            <button id="jumpToFrontierBtn">JUMP TO FRONTIER</button>
+            <button id="jumpTimelineBtn">JUMP THE TIMELINE</button>
             <button id="closeLevelSelectBtn" class="btn-modal-close">Close</button>
         </div>
     </div>
